--- a/cheatsheets/javascriptcs.html
+++ b/cheatsheets/javascriptcs.html
@@ -87,9 +87,9 @@
 
     <p>
         <b>parseInt()</b> <br>
-        <code>userInput = 'a23';</code> <br>
+        <code>userInput = '23';</code> <br>
         <br>
-        Users may sometimes make typos, but with parseInt, we can get the number in the str or conv str to int.
+        convers str to int. same goes for parseFloat()
         <code>parseInt(userInput);</code> <br>will return the value of 23
     </p>
 
