--- a/website/testimonials.html
+++ b/website/testimonials.html
@@ -41,6 +41,7 @@
                 <div class="dropdown_content">
                     <a href="projects.html#games">Games</a>
                     <a href="projects.html#prac">Practical applications</a>
+                    <a href="projects.html#demo">Website demonstrations</a>
                 </div>
             </div>
             <div class="dropdown">
